Bug 11676 - operand to volatile asm incorrectly removed
Summary: operand to volatile asm incorrectly removed
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: inline-asm (show other bugs)
Version: 3.4.0
: P2 normal
Target Milestone: 3.4.0
Assignee: Richard Henderson
URL:
Keywords:
: 10536 (view as bug list)
Depends on:
Blocks:
 
Reported: 2003-07-26 14:23 UTC by Richard Henderson
Modified: 2003-08-25 17:43 UTC (History)
2 users (show)

See Also:
Host: i686-linux
Target: i686-linux
Build: i686-linux
Known to work:
Known to fail:
Last reconfirmed: 2003-07-26 14:25:41


Attachments
test that generates a warning (109 bytes, text/plain)
2003-07-26 14:24 UTC, Richard Henderson
Details
test that demonstrates incorrect code (174 bytes, text/plain)
2003-07-26 14:25 UTC, Richard Henderson
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Richard Henderson 2003-07-26 14:23:50 UTC
The first attached test case canaries the problem by generating an
obviously bogus "used before set" warning with -Wall.  An x86-specific
modification yields a test case that demonstrates the loss of an
input operand to a volatile inline asm.
Comment 1 Richard Henderson 2003-07-26 14:24:42 UTC
Created attachment 4480 [details]
test that generates a warning
Comment 2 Richard Henderson 2003-07-26 14:25:23 UTC
Created attachment 4481 [details]
test that demonstrates incorrect code
Comment 3 Andrew Pinski 2003-07-26 23:40:55 UTC
Fixed in the mainline by:
2003-07-26  Richard Henderson

        PR inline-asm/11676
        * cse.c (count_reg_usage): Handle asm_operands properly.
Comment 4 Ulrich Weigand 2003-08-25 17:43:01 UTC
*** Bug 10536 has been marked as a duplicate of this bug. ***