        PR inline-asm/11676         * cse.c (count_reg_usage): Handle asm_operands properly.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@69816 138bc75d-0d04-0410-961f-82ee72b054a4